--- a/app/src/main/res/layout/activity_list_machine.xml
+++ b/app/src/main/res/layout/activity_list_machine.xml
@@ -13,9 +13,12 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:backgroundTint="@color/orange_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:focusable="true"
+        android:contentDescription="@string/add_machine" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvListMachine"
